The Samba-Bugzilla – Bug 13776
winbindd idmap child may crash in tldap due to a use after free
Last modified: 2019-02-09 18:43:36 UTC
winbindd idmap child may crash in tldap due to a use after free. Not as bad as it sounds, this only gets triggered in error conditions on the LDAP connection/request.
Created attachment 14835 [details] Patch for 4.8, 4.9 and 4.10 cherry-picked from master
Comment on attachment 14835 [details] Patch for 4.8, 4.9 and 4.10 cherry-picked from master LGTM.
Re-assigning to Karolin for inclusion in 4.10.rcNext, 4.9.next, 4.8.next.
Shouldn't we add a comment at least in master that it should not be called? Not that someone adds it again?